<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    style="@style/AppTheme"
    android:padding="50sp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        style="@style/AppTheme">

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="40sp"
            android:textAlignment="center"
            android:layout_marginBottom="50sp"/>

        <EditText
            android:id="@+id/etUser"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/username"
            android:layout_marginBottom="20sp"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_marginBottom="20sp"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnlogin"
            android:layout_marginBottom="10sp"/>

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnsign_up"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_marginStart="0sp"/>
    </LinearLayout>

</RelativeLayout>