<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signUpLay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    style="@style/AppTheme"
    android:padding="50sp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="40sp"
            android:textAlignment="center"
            android:layout_marginBottom="50sp"/>

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/name"
            android:layout_marginBottom="20sp"/>

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/singup_username"
            android:layout_marginBottom="20sp"/>

        <EditText
            android:id="@+id/etSignUpPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/signup_password"
            android:layout_marginBottom="20sp"/>

        <EditText
            android:id="@+id/etRepeatPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/repeat_password"
            android:layout_marginBottom="20sp"/>

        <Button
            android:id="@+id/btnSign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_login"
            android:layout_marginBottom="10sp"/>

    </LinearLayout>
</RelativeLayout>